# rm

./: 23121179王宇轩.epro  githubsite.txt  run.sh
UART/: UART.ioc
UART/Core/: CMakeLists.txt
UART/Core/Src/: main.c  stm32f1xx_it.c  tim.c
UART/MDK-ARM/: UART.uvguix.kawak  UART.uvoptx  UART.uvprojx  startup_stm32f103xe.lst
UART/MDK-ARM/UART/: UART.axf  UART.build_log.htm  UART.hex  UART.htm  UART.lnp  UART.map  UART_UART.dep  dma.crf  dma.d  gpio.crf  gpio.d  main.crf  main.d  stm32f1xx_hal.crf  stm32f1xx_hal.d  stm32f1xx_hal_cortex.crf  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.crf  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.crf  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.crf  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.crf  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.crf  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.crf  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_msp.crf  stm32f1xx_hal_msp.d  stm32f1xx_hal_pwr.crf  stm32f1xx_hal_pwr.d  stm32f1xx_hal_rcc.crf  stm32f1xx_hal_rcc.d  stm32f1xx_hal_rcc_ex.crf  stm32f1xx_hal_rcc_ex.d  stm32f1xx_hal_tim.crf  stm32f1xx_hal_tim.d  stm32f1xx_hal_tim_ex.crf  (+11 more)
breathled/: breathled.ioc
breathled/Core/Inc/: main.h
breathled/Core/Src/: main.c  tim.c
breathled/MDK-ARM/: breathled.uvguix.kawak  breathled.uvoptx  breathled.uvprojx  startup_stm32f103xe.lst
breathled/MDK-ARM/breathled/: breathled.axf  breathled.build_log.htm  breathled.hex  breathled.htm  breathled.lnp  breathled.map  breathled_breathled.dep  gpio.crf  gpio.d  main.crf  (+36 more)
led/: led.ioc
led/MDK-ARM/: led.uvguix.kawak  led.uvoptx  led.uvprojx  startup_stm32f103xe.lst
(+46 files in other folders)
