cmake_minimum_required(VERSION 3.24)  
project(test)  
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)  
set(CMAKE_CXX_STANDARD 23)  
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -pg -fno-elide-constructors -Wall -fsanitize=address")  
file(GLOB ALL_SRC_FILES ${PROJECT_SOURCE_DIR}/*.cpp)  
foreach (SRC_FILE ${ALL_SRC_FILES})  
    get_filename_component(EXE_NAME ${SRC_FILE} NAME_WE)  
    add_executable(${EXE_NAME} ${SRC_FILE})  
endforeach()